crates/swc_fast_ts_strip/tests/errors/modules.ts
module aModuleKeywordNamespace { }

export module aModuleKeywordExportedNamespace { }